// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchPage > should call search action with name and strenght parameters 1`] = `
<div>
  <div
    data-testid="custom-jumbotron"
  />
  <nav
    aria-label="breadcrumb"
    class="my-5"
    data-slot="breadcrumb"
  >
    <ol
      class="text-muted-foreground flex flex-wrap items-center gap-1.5 text-sm break-words sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="hover:text-foreground transition-colors"
          data-slot="breadcrumb-link"
          href="/"
        >
          Inicio
        </a>
      </li>
      <div
        class="flex gap-2 items-center"
      >
        <li
          aria-hidden="true"
          class="[&>svg]:size-3.5"
          data-slot="breadcrumb-separator"
          role="presentation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-slash"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 2 2 22"
            />
          </svg>
        </li>
        <li
          class="inline-flex items-center gap-1.5"
          data-slot="breadcrumb-item"
        >
          <a
            data-discover="true"
            href="/search"
          >
            Search
          </a>
        </li>
      </div>
    </ol>
  </nav>
  <div>
    Cargando...
  </div>
  <div
    data-testid="search-controls"
  />
  <div
    data-testid="hero-grid"
  />
</div>
`;

exports[`SearchPage > should call search action with name parameter 1`] = `
<div>
  <div
    data-testid="custom-jumbotron"
  />
  <nav
    aria-label="breadcrumb"
    class="my-5"
    data-slot="breadcrumb"
  >
    <ol
      class="text-muted-foreground flex flex-wrap items-center gap-1.5 text-sm break-words sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="hover:text-foreground transition-colors"
          data-slot="breadcrumb-link"
          href="/"
        >
          Inicio
        </a>
      </li>
      <div
        class="flex gap-2 items-center"
      >
        <li
          aria-hidden="true"
          class="[&>svg]:size-3.5"
          data-slot="breadcrumb-separator"
          role="presentation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-slash"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 2 2 22"
            />
          </svg>
        </li>
        <li
          class="inline-flex items-center gap-1.5"
          data-slot="breadcrumb-item"
        >
          <a
            data-discover="true"
            href="/search"
          >
            Search
          </a>
        </li>
      </div>
    </ol>
  </nav>
  <div>
    Cargando...
  </div>
  <div
    data-testid="search-controls"
  />
  <div
    data-testid="hero-grid"
  />
</div>
`;

exports[`SearchPage > should call search action with strenght parameter 1`] = `
<div>
  <div
    data-testid="custom-jumbotron"
  />
  <nav
    aria-label="breadcrumb"
    class="my-5"
    data-slot="breadcrumb"
  >
    <ol
      class="text-muted-foreground flex flex-wrap items-center gap-1.5 text-sm break-words sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="hover:text-foreground transition-colors"
          data-slot="breadcrumb-link"
          href="/"
        >
          Inicio
        </a>
      </li>
      <div
        class="flex gap-2 items-center"
      >
        <li
          aria-hidden="true"
          class="[&>svg]:size-3.5"
          data-slot="breadcrumb-separator"
          role="presentation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-slash"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22 2 2 22"
            />
          </svg>
        </li>
        <li
          class="inline-flex items-center gap-1.5"
          data-slot="breadcrumb-item"
        >
          <a
            data-discover="true"
            href="/search"
          >
            Search
          </a>
        </li>
      </div>
    </ol>
  </nav>
  <div>
    Cargando...
  </div>
  <div
    data-testid="search-controls"
  />
  <div
    data-testid="hero-grid"
  />
</div>
`;

exports[`SearchPage > should render SearchPage with default values 1`] = `
<div>
  <div
    data-testid="custom-jumbotron"
  />
  <nav
    aria-label="breadcrumb"
    class="my-5"
    data-slot="breadcrumb"
  >
    <ol
      class="text-muted-foreground flex flex-wrap items-center gap-1.5 text-sm break-words sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="hover:text-foreground transition-colors"
          data-slot="breadcrumb-link"
          href="/"
        >
          Inicio
        </a>
      </li>
    </ol>
  </nav>
  <div>
    Cargando...
  </div>
  <div
    data-testid="search-controls"
  />
  <div
    data-testid="hero-grid"
  />
</div>
`;
